--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/mapbox/dynamodb-migrator#readme",
   "devDependencies": {
     "dynamodb-test": "0.0.4",
-    "tape": "^4.0.0",
+    "kinesis-test": "0.0.2",
+    "tape": "^3.5.0",
     "underscore": "^1.8.3"
   },
   "dependencies": {
