expect dynamo wire format instead of JSON

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "underscore": "^1.8.3"
   },
   "dependencies": {
-    "dyno": "^0.13.1",
+    "dyno": "0.15.1",
     "minimist": "^1.1.1",
     "queue-async": "^1.0.7",
     "split": "^0.3.3"
