--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "underscore": "^1.8.3"
   },
   "dependencies": {
-    "dyno": "^1.0.1",
+    "@mapbox/dyno": "^1.4.2",
     "minimist": "^1.2.0",
     "queue-async": "1.0.7",
     "split": "^0.3.3"
