added before option to prepopulate required data for migrator; tests to be added

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dynamodb-migrate": "bin/migrate.js",
     "test": "tape test/*.test.js"
   },
   "bin": {
